# yuspec

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
compiler/include/yuspec/: ast.h  diagnostic.h  ir.h  json_writer.h  lexer.h  parser.h  token.h  v1_ast.h  v1_lexer.h  v1_parser.h  v1_sema.h  v1_token.h  validate.h
compiler/src/: diagnostic.cpp  ir.cpp  json_writer.cpp  lexer.cpp  parser.cpp  v1_lexer.cpp  v1_parser.cpp  v1_sema.cpp  validate.cpp
docs/: ACADEMIC_PAPER.md  LANGUAGE_REFERENCE.md  action-binding.md  debugging.md  language.md  legacy-examples.md  reddit-launch.md  release-checklist.md  roadmap.md  strict-mode.md  unity-dev-environment.md  unity-integration.md  v1-readiness-audit.md  vision.md
docs/reddit/: r-unity3d-v1.1.1.md
docs/releases/: v1.0.1.md  v1.1.0.md  v1.1.1.md
engine/raylib_viewer/: main.cpp
examples/: 00_arena_min.yus  03_showcase.yus  README.md
examples/distributed/: 01_orchestration.yus
examples/game/: 01_mmo.yus
examples/iot/: 01_sensor.yus
examples/network/: 01_tcp_handshake.yus
examples/simulation/: 01_traffic.yus
examples/testing/: 01_scenario.yus
examples/workflow/: 01_approval.yus
runtime/include/yuspec_rt/: components.h  entity.h  rng.h  runtime.h  v1_ecs.h  v1_event_bus.h  v1_interpreter.h  v1_sm_runtime.h  v1_value.h  world.h
runtime/src/: components.cpp  entity.cpp  rng.cpp  runtime.cpp  v1_interpreter.cpp  v1_sm_runtime.cpp  world.cpp
tools/vscode-yuspec/: .vscodeignore  README.md  extension.ts  package.json  tsconfig.json
tools/vscode-yuspec/syntaxes/: yuspec.tmLanguage.json
tools/yuspec1_cli/: main.cpp
tools/yuspec_cli/: main.cpp
unity/: README.md
unity/YuspecUnityDev/: README.md
unity/YuspecUnityDev/Assets/TopDownDungeonDemo/: README.md  TopDownDungeon.unity
unity/YuspecUnityDev/Assets/TopDownDungeonDemo/Scripts/: YuspecTopDownDungeonPlayable.cs
unity/YuspecUnityDev/Assets/YuspecDev/Editor/: YuspecDevSceneBuilder.cs
unity/YuspecUnityDev/Assets/YuspecDev/Scenes/: DoorExample.unity
unity/YuspecUnityDev/Assets/YuspecDev/Scripts/: DoorExampleDriver.cs
unity/YuspecUnityDev/ProjectSettings/: ProjectSettings.asset
